--- a/styles/global.css
+++ b/styles/global.css
@@ -7,11 +7,11 @@
   box-sizing: border-box;
 }
 /*
-  2. Remove default margin
+  2. Remove default margin & padding
 */
 * {
   margin: 0;
-  overflow: hidden;
+  padding: 0;
 }
 /*
   3. Allow percentage-based heights in the application
@@ -19,6 +19,7 @@
 html,
 body {
   height: 100%;
+  overflow: hidden;
 }
 /*
   Typographic tweaks!
@@ -39,25 +40,4 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
-}
-/*
-  7. Remove built-in form typography styles
-*/
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-/*
-  8. Avoid text overflows
-*/
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
 }
