--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,8 +1,8 @@
-@import "~swiper/css";
-@import "~swiper/css/pagination";
-@import "~swiper/css/navigation";
-@import "react-modal-video/css/modal-video.min.css";
-@import "keen-slider/keen-slider.min.css";
+@import '~swiper/css';
+@import '~swiper/css/pagination';
+@import '~swiper/css/navigation';
+@import 'react-modal-video/css/modal-video.min.css';
+@import 'keen-slider/keen-slider.min.css';
 
 /*
   1. Use a more-intuitive box-sizing model.
@@ -65,14 +65,14 @@ svg {
 }
 .swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
-  content: "next";
+  content: 'next';
   font-size: 12px !important;
   color: white;
   font-weight: 800;
 }
 .swiper-button-prev:after,
 .swiper-rtl .swiper-button-next:after {
-  content: "prev";
+  content: 'prev';
   font-size: 12px !important;
   color: white;
   font-weight: 800;
@@ -90,9 +90,9 @@ svg {
   }
 }
 
-.featured-swipperSmDown  {
+.featured-swipperSmDown {
   .swiper-slide {
     transform: none;
-    width: 283px !important
+    width: 283px !important;
   }
 }
