--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,7 +3,7 @@
 @import '~swiper/css/navigation';
 @import 'react-modal-video/css/modal-video.min.css';
 @import 'keen-slider/keen-slider.min.css';
-// @import 'react-toastify/dist/ReactToastify.css';
+@import 'react-toastify/dist/ReactToastify.css';
 
 /*
   1. Use a more-intuitive box-sizing model.
