add feature news and academy

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -83,6 +83,16 @@ svg {
     width: 215px !important;
   }
 }
+.academy-swiper-lg {
+  .swiper-slide {
+    width: 305px !important;
+  }
+}
+.academy-swiper-sm {
+  .swiper-slide {
+    width: 255px !important;
+  }
+}
 .featured-swipper {
   overflow: unset;
   .swiper-slide {
